fixed calendar days going out of container on large months

--- a/client/src/containers/booking/booking.css
+++ b/client/src/containers/booking/booking.css
@@ -21,6 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  max-height: 400px;
 }
 
 .buttons-container {
@@ -130,12 +131,6 @@
   font-weight: 500;
   color: rgba(0, 0, 0, 0.65);
   margin-bottom: 2rem;
-}
-
-.timeOutput li {
-  /* list-style-type: none; */
-  /* margin: 0;
-  padding: 0; */
 }
 
 .timeOutput h1 {
